src/map-grammar/v2-parser/parser/MapGrammarV2Parser.ts
// Generated from src/MapGrammar/V2Parser/SyntaxDefinitions/MapGrammarV2Parser.g4 by ANTLR 4.6-SNAPSHOT


import { ATN } from "antlr4ts/atn/ATN";
import { ATNDeserializer } from "antlr4ts/atn/ATNDeserializer";
import { FailedPredicateException } from "antlr4ts/FailedPredicateException";
import { NotNull } from "antlr4ts/Decorators";
import { NoViableAltException } from "antlr4ts/NoViableAltException";
import { Override } from "antlr4ts/Decorators";
import { Parser } from "antlr4ts/Parser";
import { ParserRuleContext } from "antlr4ts/ParserRuleContext";
import { ParserATNSimulator } from "antlr4ts/atn/ParserATNSimulator";
import { ParseTreeListener } from "antlr4ts/tree/ParseTreeListener";
import { ParseTreeVisitor } from "antlr4ts/tree/ParseTreeVisitor";
import { RecognitionException } from "antlr4ts/RecognitionException";
import { RuleContext } from "antlr4ts/RuleContext";
//import { RuleVersion } from "antlr4ts/RuleVersion";
import { TerminalNode } from "antlr4ts/tree/TerminalNode";
import { Token } from "antlr4ts/Token";
import { TokenStream } from "antlr4ts/TokenStream";
import { Vocabulary } from "antlr4ts/Vocabulary";
import { VocabularyImpl } from "antlr4ts/VocabularyImpl";

import * as Utils from "antlr4ts/misc/Utils";

import { MapGrammarV2ParserListener } from "./MapGrammarV2ParserListener";
import { MapGrammarV2ParserVisitor } from "./MapGrammarV2ParserVisitor";


export class MapGrammarV2Parser extends Parser {
	public static readonly BVETS = 1;
	public static readonly MAP = 2;
	public static readonly SELECT_ENCODE = 3;
	public static readonly INCLUDE = 4;
	public static readonly CURVE = 5;
	public static readonly GRADIENT = 6;
	public static readonly TRACK = 7;
	public static readonly STRUCTURE = 8;
	public static readonly REPEATER = 9;
	public static readonly BACKGROUND = 10;
	public static readonly STATION = 11;
	public static readonly SECTION = 12;
	public static readonly SIGNAL = 13;
	public static readonly BEACON = 14;
	public static readonly SPEEDLIMIT = 15;
	public static readonly PRETRAIN = 16;
	public static readonly LIGHT = 17;
	public static readonly FOG = 18;
	public static readonly DRAWDISTANCE = 19;
	public static readonly CABILLUMINANCE = 20;
	public static readonly IRREGULARITY = 21;
	public static readonly ADHESION = 22;
	public static readonly SOUND = 23;
	public static readonly SOUND3D = 24;
	public static readonly ROLLINGNOISE = 25;
	public static readonly FLANGENOISE = 26;
	public static readonly JOINTNOISE = 27;
	public static readonly TRAIN = 28;
	public static readonly LEGACY = 29;
	public static readonly X_ELEMENT = 30;
	public static readonly Y_ELEMENT = 31;
	public static readonly CANT_ELEMENT = 32;
	public static readonly SET_GAUGE = 33;
	public static readonly GAUGE = 34;
	public static readonly SET_CENTER = 35;
	public static readonly SET_FUNCTION = 36;
	public static readonly SET = 37;
	public static readonly BEGIN_TRANSITION = 38;
	public static readonly BEGIN = 39;
	public static readonly BEGIN0 = 40;
	public static readonly BEGIN_CIRCULAR = 41;
	public static readonly BEGIN_CONST = 42;
	public static readonly BEGIN_NEW = 43;
	public static readonly END = 44;
	public static readonly INTERPOLATE = 45;
	public static readonly CHANGE = 46;
	public static readonly POSITION = 47;
	public static readonly LOAD = 48;
	public static readonly PUT = 49;
	public static readonly PUT0 = 50;
	public static readonly PUTBETWEEN = 51;
	public static readonly SET_SPEEDLIMIT = 52;
	public static readonly PASS = 53;
	public static readonly AMBIENT = 54;
	public static readonly DIFFUSE = 55;
	public static readonly DIRECTION = 56;
	public static readonly PLAY = 57;
	public static readonly ADD = 58;
	public static readonly ENABLE = 59;
	public static readonly STOP = 60;
	public static readonly PITCH = 61;
	public static readonly TURN = 62;
	public static readonly STATE_END = 63;
	public static readonly DOT = 64;
	public static readonly COMMA = 65;
	public static readonly NUM = 66;
	public static readonly NULL = 67;
	public static readonly DISTANCE = 68;
	public static readonly EQUAL = 69;
	public static readonly PLUS = 70;
	public static readonly MINUS = 71;
	public static readonly MULT = 72;
	public static readonly DIV = 73;
	public static readonly MOD = 74;
	public static readonly ABS = 75;
	public static readonly ATAN2 = 76;
	public static readonly CEIL = 77;
	public static readonly COS = 78;
	public static readonly EXP = 79;
	public static readonly FLOOR = 80;
	public static readonly LOG = 81;
	public static readonly POW = 82;
	public static readonly RAND = 83;
	public static readonly SIN = 84;
	public static readonly SQRT = 85;
	public static readonly OPN_PAR = 86;
	public static readonly CLS_PAR = 87;
	public static readonly OPN_BRA = 88;
	public static readonly CLS_BRA = 89;
	public static readonly WHITESPACE = 90;
	public static readonly COMMENT = 91;
	public static readonly VAR_START = 92;
	public static readonly VAR = 93;
	public static readonly QUOTE = 94;
	public static readonly ERROR_TOKEN = 95;
	public static readonly RQUOTE = 96;
	public static readonly CHAR = 97;
	public static readonly E_WS = 98;
	public static readonly ENCODE_END = 99;
	public static readonly ENCODE_CHAR = 100;
	public static readonly RULE_root = 0;
	public static readonly RULE_statement = 1;
	public static readonly RULE_distance = 2;
	public static readonly RULE_include = 3;
	public static readonly RULE_curve = 4;
	public static readonly RULE_gradient = 5;
	public static readonly RULE_track = 6;
	public static readonly RULE_structure = 7;
	public static readonly RULE_repeater = 8;
	public static readonly RULE_background = 9;
	public static readonly RULE_station = 10;
	public static readonly RULE_section = 11;
	public static readonly RULE_signal = 12;
	public static readonly RULE_beacon = 13;
	public static readonly RULE_speedlimit = 14;
	public static readonly RULE_pretrain = 15;
	public static readonly RULE_light = 16;
	public static readonly RULE_fog = 17;
	public static readonly RULE_drawdistance = 18;
	public static readonly RULE_cabilluminance = 19;
	public static readonly RULE_irregularity = 20;
	public static readonly RULE_adhesion = 21;
	public static readonly RULE_sound = 22;
	public static readonly RULE_sound3d = 23;
	public static readonly RULE_rollingnoise = 24;
	public static readonly RULE_flangenoise = 25;
	public static readonly RULE_jointnoise = 26;
	public static readonly RULE_train = 27;
	public static readonly RULE_strkey = 28;
	public static readonly RULE_exprArgs = 29;
	public static readonly RULE_varAssign = 30;
	public static readonly RULE_legacy = 31;
	public static readonly RULE_nullableExpr = 32;
	public static readonly RULE_expr = 33;
	public static readonly RULE_var = 34;
	public static readonly RULE_string = 35;
	public static readonly RULE_string_text = 36;
	public static readonly RULE_encoding = 37;
	public static readonly RULE_encode_string = 38;
	public static readonly RULE_error_tokens = 39;
	// tslint:disable:no-trailing-whitespace
	public static readonly ruleNames: string[] = [
		"root", "statement", "distance", "include", "curve", "gradient", "track", 
		"structure", "repeater", "background", "station", "section", "signal", 
		"beacon", "speedlimit", "pretrain", "light", "fog", "drawdistance", "cabilluminance", 
		"irregularity", "adhesion", "sound", "sound3d", "rollingnoise", "flangenoise", 
		"jointnoise", "train", "strkey", "exprArgs", "varAssign", "legacy", "nullableExpr", 
		"expr", "var", "string", "string_text", "encoding", "encode_string", "error_tokens",
	];

	private static readonly _LITERAL_NAMES: Array<string | undefined> = [
		undefined, undefined, undefined, "':'", undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		"';'", "'.'", "','", undefined, undefined, undefined, "'='", "'+'", "'-'", 
		"'*'", "'/'", "'%'", undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, "'('", 
		"')'", "'['", "']'", undefined, undefined, "'$'",
	];
	private static readonly _SYMBOLIC_NAMES: Array<string | undefined> = [
		undefined, "BVETS", "MAP", "SELECT_ENCODE", "INCLUDE", "CURVE", "GRADIENT", 
		"TRACK", "STRUCTURE", "REPEATER", "BACKGROUND", "STATION", "SECTION", 
		"SIGNAL", "BEACON", "SPEEDLIMIT", "PRETRAIN", "LIGHT", "FOG", "DRAWDISTANCE", 
		"CABILLUMINANCE", "IRREGULARITY", "ADHESION", "SOUND", "SOUND3D", "ROLLINGNOISE", 
		"FLANGENOISE", "JOINTNOISE", "TRAIN", "LEGACY", "X_ELEMENT", "Y_ELEMENT", 
		"CANT_ELEMENT", "SET_GAUGE", "GAUGE", "SET_CENTER", "SET_FUNCTION", "SET", 
		"BEGIN_TRANSITION", "BEGIN", "BEGIN0", "BEGIN_CIRCULAR", "BEGIN_CONST", 
		"BEGIN_NEW", "END", "INTERPOLATE", "CHANGE", "POSITION", "LOAD", "PUT", 
		"PUT0", "PUTBETWEEN", "SET_SPEEDLIMIT", "PASS", "AMBIENT", "DIFFUSE", 
		"DIRECTION", "PLAY", "ADD", "ENABLE", "STOP", "PITCH", "TURN", "STATE_END", 
		"DOT", "COMMA", "NUM", "NULL", "DISTANCE", "EQUAL", "PLUS", "MINUS", "MULT", 
		"DIV", "MOD", "ABS", "ATAN2", "CEIL", "COS", "EXP", "FLOOR", "LOG", "POW", 
		"RAND", "SIN", "SQRT", "OPN_PAR", "CLS_PAR", "OPN_BRA", "CLS_BRA", "WHITESPACE", 
		"COMMENT", "VAR_START", "VAR", "QUOTE", "ERROR_TOKEN", "RQUOTE", "CHAR", 
		"E_WS", "ENCODE_END", "ENCODE_CHAR",
	];
	public static readonly VOCABULARY: Vocabulary = new VocabularyImpl(MapGrammarV2Parser._LITERAL_NAMES, MapGrammarV2Parser._SYMBOLIC_NAMES, []);

	// @Override
	// @NotNull
	public get vocabulary(): Vocabulary {
		return MapGrammarV2Parser.VOCABULARY;
	}
	// tslint:enable:no-trailing-whitespace

	// @Override
	public get grammarFileName(): string { return "MapGrammarV2Parser.g4"; }

	// @Override
	public get ruleNames(): string[] { return MapGrammarV2Parser.ruleNames; }

	// @Override
	public get serializedATN(): string { return MapGrammarV2Parser._serializedATN; }

	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(MapGrammarV2Parser._ATN, this);
	}
	// @RuleVersion(0)
	public root(): RootContext {
		let _localctx: RootContext = new RootContext(this._ctx, this.state);
		this.enterRule(_localctx, 0, MapGrammarV2Parser.RULE_root);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 80;
			this.match(MapGrammarV2Parser.BVETS);
			this.state = 81;
			this.match(MapGrammarV2Parser.MAP);
			this.state = 82;
			_localctx._version = this.match(MapGrammarV2Parser.NUM);
			this.state = 84;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === MapGrammarV2Parser.SELECT_ENCODE) {
				{
				this.state = 83;
				this.encoding();
				}
			}

			this.state = 91;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << MapGrammarV2Parser.INCLUDE) | (1 << MapGrammarV2Parser.CURVE) | (1 << MapGrammarV2Parser.GRADIENT) | (1 << MapGrammarV2Parser.TRACK) | (1 << MapGrammarV2Parser.STRUCTURE) | (1 << MapGrammarV2Parser.REPEATER) | (1 << MapGrammarV2Parser.BACKGROUND) | (1 << MapGrammarV2Parser.STATION) | (1 << MapGrammarV2Parser.SECTION) | (1 << MapGrammarV2Parser.SIGNAL) | (1 << MapGrammarV2Parser.BEACON) | (1 << MapGrammarV2Parser.SPEEDLIMIT) | (1 << MapGrammarV2Parser.PRETRAIN) | (1 << MapGrammarV2Parser.LIGHT) | (1 << MapGrammarV2Parser.FOG) | (1 << MapGrammarV2Parser.DRAWDISTANCE) | (1 << MapGrammarV2Parser.CABILLUMINANCE) | (1 << MapGrammarV2Parser.IRREGULARITY) | (1 << MapGrammarV2Parser.ADHESION) | (1 << MapGrammarV2Parser.SOUND) | (1 << MapGrammarV2Parser.SOUND3D) | (1 << MapGrammarV2Parser.ROLLINGNOISE) | (1 << MapGrammarV2Parser.FLANGENOISE) | (1 << MapGrammarV2Parser.JOINTNOISE) | (1 << MapGrammarV2Parser.TRAIN) | (1 << MapGrammarV2Parser.LEGACY))) !== 0) || ((((_la - 66)) & ~0x1F) === 0 && ((1 << (_la - 66)) & ((1 << (MapGrammarV2Parser.NUM - 66)) | (1 << (MapGrammarV2Parser.DISTANCE - 66)) | (1 << (MapGrammarV2Parser.PLUS - 66)) | (1 << (MapGrammarV2Parser.MINUS - 66)) | (1 << (MapGrammarV2Parser.ABS - 66)) | (1 << (MapGrammarV2Parser.ATAN2 - 66)) | (1 << (MapGrammarV2Parser.CEIL - 66)) | (1 << (MapGrammarV2Parser.COS - 66)) | (1 << (MapGrammarV2Parser.EXP - 66)) | (1 << (MapGrammarV2Parser.FLOOR - 66)) | (1 << (MapGrammarV2Parser.LOG - 66)) | (1 << (MapGrammarV2Parser.POW - 66)) | (1 << (MapGrammarV2Parser.RAND - 66)) | (1 << (MapGrammarV2Parser.SIN - 66)) | (1 << (MapGrammarV2Parser.SQRT - 66)) | (1 << (MapGrammarV2Parser.OPN_PAR - 66)) | (1 << (MapGrammarV2Parser.VAR_START - 66)) | (1 << (MapGrammarV2Parser.QUOTE - 66)))) !== 0)) {
				{
				{
				this.state = 86;
				this.statement();
				this.state = 87;
				this.match(MapGrammarV2Parser.STATE_END);
				}
				}
				this.state = 93;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 94;
			this.match(MapGrammarV2Parser.EOF);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public statement(): StatementContext {
		let _localctx: StatementContext = new StatementContext(this._ctx, this.state);
		this.enterRule(_localctx, 2, MapGrammarV2Parser.RULE_statement);
		try {
			this.state = 150;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 2, this._ctx) ) {
			case 1:
				_localctx = new DistStateContext(_localctx);
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 96;
				this.distance();
				}
				break;

			case 2:
				_localctx = new IncludeStateContext(_localctx);
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 97;
				this.match(MapGrammarV2Parser.INCLUDE);
				this.state = 98;
				this.include();
				}
				break;

			case 3:
				_localctx = new CurveStateContext(_localctx);
				this.enterOuterAlt(_localctx, 3);
				{
				this.state = 99;
				this.match(MapGrammarV2Parser.CURVE);
				this.state = 100;
				this.curve();
				}
				break;

			case 4:
				_localctx = new GradientStateContext(_localctx);
				this.enterOuterAlt(_localctx, 4);
				{
				this.state = 101;
				this.match(MapGrammarV2Parser.GRADIENT);
				this.state = 102;
				this.gradient();
				}
				break;

			case 5:
				_localctx = new TrackStateContext(_localctx);
				this.enterOuterAlt(_localctx, 5);
				{
				this.state = 103;
				this.match(MapGrammarV2Parser.TRACK);
				this.state = 104;
				this.track();
				}
				break;

			case 6:
				_localctx = new StructureStateContext(_localctx);
				this.enterOuterAlt(_localctx, 6);
				{
				this.state = 105;
				this.match(MapGrammarV2Parser.STRUCTURE);
				this.state = 106;
				this.structure();
				}
				break;

			case 7:
				_localctx = new RepeaterStateContext(_localctx);
				this.enterOuterAlt(_localctx, 7);
				{
				this.state = 107;
				this.match(MapGrammarV2Parser.REPEATER);
				this.state = 108;
				this.repeater();
				}
				break;

			case 8:
				_localctx = new BackgroundStateContext(_localctx);
				this.enterOuterAlt(_localctx, 8);
				{
				this.state = 109;
				this.match(MapGrammarV2Parser.BACKGROUND);
				this.state = 110;
				this.background();
				}
				break;

			case 9:
				_localctx = new StationStateContext(_localctx);
				this.enterOuterAlt(_localctx, 9);
				{
				this.state = 111;
				this.match(MapGrammarV2Parser.STATION);
				this.state = 112;
				this.station();
				}
				break;

			case 10:
				_localctx = new SectionStateContext(_localctx);
				this.enterOuterAlt(_localctx, 10);
				{
				this.state = 113;
				this.match(MapGrammarV2Parser.SECTION);
				this.state = 114;
				this.section();
				}
				break;

			case 11:
				_localctx = new SignalStateContext(_localctx);
				this.enterOuterAlt(_localctx, 11);
				{
				this.state = 115;
				this.match(MapGrammarV2Parser.SIGNAL);
				this.state = 116;
				this.signal();
				}
				break;

			case 12:
				_localctx = new BeaconStateContext(_localctx);
				this.enterOuterAlt(_localctx, 12);
				{
				this.state = 117;
				this.match(MapGrammarV2Parser.BEACON);
				this.state = 118;
				this.beacon();
				}
				break;
